feat: backport 到 Fabric 1.16.5 (Java 8)
- 使用 Gradle 9.2.1 + Fabric Loom 1.14
- 适配 1.16.5 API (LiteralText, MatrixStack, EntryListWidget)
- 移动客户端代码到 src/main (1.16.5 不支持 splitEnvironmentSourceSets)